--- a/Copy_of_Logosfieldcddr.ipynb
+++ b/Copy_of_Logosfieldcddr.ipynb
@@ -28,56 +28,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wcxieDgnpoZ4",
-        "outputId": "44926ad4-5b26-4285-ce30-2582cc67db29"
+        "outputId": "a211c476-f10e-4b9b-e782-6b93170f168e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-19 22:16:35--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES_STAT+SYS.cov\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2025-08-19 22:28:30--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES_STAT+SYS.cov\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 33284960 (32M) [text/plain]\n",
             "Saving to: ‘/content/pantheon_cov/Pantheon+SH0ES_STAT+SYS.cov’\n",
             "\n",
-            "\r          /content/   0%[                    ]       0  --.-KB/s               \r/content/pantheon_c 100%[===================>]  31.74M   191MB/s    in 0.2s    \n",
+            "/content/pantheon_c 100%[===================>]  31.74M  45.2MB/s    in 0.7s    \n",
             "\n",
-            "2025-08-19 22:16:35 (191 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES_STAT+SYS.cov’ saved [33284960/33284960]\n",
+            "2025-08-19 22:28:34 (45.2 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES_STAT+SYS.cov’ saved [33284960/33284960]\n",
             "\n",
-            "--2025-08-19 22:16:35--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES_STATONLY.cov\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "--2025-08-19 22:28:34--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES_STATONLY.cov\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 31827416 (30M) [text/plain]\n",
             "Saving to: ‘/content/pantheon_cov/Pantheon+SH0ES_STATONLY.cov’\n",
             "\n",
-            "/content/pantheon_c 100%[===================>]  30.35M   169MB/s    in 0.2s    \n",
+            "/content/pantheon_c 100%[===================>]  30.35M  43.1MB/s    in 0.7s    \n",
             "\n",
-            "2025-08-19 22:16:35 (169 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES_STATONLY.cov’ saved [31827416/31827416]\n",
+            "2025-08-19 22:28:35 (43.1 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES_STATONLY.cov’ saved [31827416/31827416]\n",
             "\n",
-            "--2025-08-19 22:16:35--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES.dat\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2025-08-19 22:28:35--  https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/main/Pantheon+_Data/4_DISTANCES_AND_COVAR/Pantheon+SH0ES.dat\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 579283 (566K) [text/plain]\n",
             "Saving to: ‘/content/pantheon_cov/Pantheon+SH0ES.dat’\n",
             "\n",
-            "/content/pantheon_c 100%[===================>] 565.71K  --.-KB/s    in 0.05s   \n",
+            "/content/pantheon_c 100%[===================>] 565.71K  2.53MB/s    in 0.2s    \n",
             "\n",
-            "2025-08-19 22:16:35 (11.3 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES.dat’ saved [579283/579283]\n",
+            "2025-08-19 22:28:38 (2.53 MB/s) - ‘/content/pantheon_cov/Pantheon+SH0ES.dat’ saved [579283/579283]\n",
             "\n",
             "total 63M\n",
-            "-rw-r--r-- 1 root root 566K Aug 19 22:16 Pantheon+SH0ES.dat\n",
-            "-rw-r--r-- 1 root root  31M Aug 19 22:16 Pantheon+SH0ES_STATONLY.cov\n",
-            "-rw-r--r-- 1 root root  32M Aug 19 22:16 Pantheon+SH0ES_STAT+SYS.cov\n"
+            "-rw-r--r-- 1 root root 566K Aug 19 22:28 Pantheon+SH0ES.dat\n",
+            "-rw-r--r-- 1 root root  31M Aug 19 22:28 Pantheon+SH0ES_STATONLY.cov\n",
+            "-rw-r--r-- 1 root root  32M Aug 19 22:28 Pantheon+SH0ES_STAT+SYS.cov\n"
           ]
         }
       ],
@@ -289,9 +289,9 @@
           "height": 974
         },
         "id": "FYFKVMvxvggM",
-        "outputId": "ab0f4be7-bcd9-4697-ccdc-03a5a1a68252"
+        "outputId": "1ebd1027-929b-48d0-9933-7908655d9a3c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,9 +515,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUXTb5hjyq6Q",
-        "outputId": "b9df8c10-5968-47c2-9414-ad6de735485c"
+        "outputId": "24a8c8b0-8700-492b-a7d6-ffe3eb7ef913"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
