--- a/Mechanism1_Logosfield_Rerun.ipynb
+++ b/Mechanism1_Logosfield_Rerun.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPA2tVUqR2yxHAmWCeTCDWI",
+      "authorship_tag": "ABX9TyN2WpFUjyNG5XxDR6zdUmeE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1501,6 +1501,50 @@
             "Saving density2.csv to density2 (6).csv\n",
             "\n",
             "Scalar-spin style result: N=500  aligned=0.6220  p=2.7e-08  95%CI=[0.5779,0.6647]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- After computing aligned, obs, etc. ---\n",
+        "aligned_count = aligned.sum()\n",
+        "total_count = len(aligned)\n",
+        "fraction = obs        # already mean fraction\n",
+        "percent = fraction * 100\n",
+        "\n",
+        "print(f\"\\nScalar-spin style result:\")\n",
+        "print(f\" N = {total_count}\")\n",
+        "print(f\" Aligned count = {aligned_count} / {total_count}\")\n",
+        "print(f\" Fraction = {fraction:.4f}\")\n",
+        "print(f\" Percent = {percent:.2f}%\")\n",
+        "print(f\" Binomial 95% CI = [{ci.low:.4f}, {ci.high:.4f}] (fraction scale)\")\n",
+        "print(f\" Binomial 95% CI = [{ci.low*100:.2f}%, {ci.high*100:.2f}%] (percent scale)\")\n",
+        "print(f\" p-value = {bt.pvalue:.3g}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zy6Wwzx7VHRm",
+        "outputId": "71e9d657-a73a-4627-ed51-6ad532a5b030"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Scalar-spin style result:\n",
+            " N = 500\n",
+            " Aligned count = 311 / 500\n",
+            " Fraction = 0.6220\n",
+            " Percent = 62.20%\n",
+            " Binomial 95% CI = [0.5779, 0.6647] (fraction scale)\n",
+            " Binomial 95% CI = [57.79%, 66.47%] (percent scale)\n",
+            " p-value = 2.7e-08\n"
           ]
         }
       ]
