--- a/Mechanism2_DensityKappa_Colab.ipynb
+++ b/Mechanism2_DensityKappa_Colab.ipynb
@@ -13,12 +13,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DGzfRE5b0946"
+        "id": "8dRXAz-jDRMC"
       },
       "source": [
         "# Mechanism 2 — Density–κ Coherence (Colab)"
       ],
-      "id": "DGzfRE5b0946"
+      "id": "8dRXAz-jDRMC"
     },
     {
       "cell_type": "code",
@@ -27,7 +27,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7216f2ae-b596-4e3e-c0b5-cbfa06e5ca08"
+        "outputId": "c874e364-4eed-4aca-9649-95ee167ce851"
       },
       "source": [
         "#@title 0. Setup\n",
@@ -41,7 +41,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m37.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/8.9 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.2/8.9 MB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:02\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/8.9 MB\u001b[0m \u001b[31m22.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.4/8.9 MB\u001b[0m \u001b[31m34.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m54.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m54.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m41.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hhealpy 1.18.1\n"
           ]
         }
@@ -73,7 +73,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c96d68b-4062-451c-dcb9-52b4b5c0f645"
+        "outputId": "d3b1892d-de9c-4cc5-b34d-265ffa191e44"
       },
       "source": [
         "#@title 2. Load/synthesize NSIDE=128 maps\n",
@@ -108,7 +108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f03a7802-1d28-477d-e1af-61c911ba5e45"
+        "outputId": "c588600e-7851-48d7-cbf4-f079da28e0d7"
       },
       "source": [
         "#@title 3. C_ell and permutation p-value\n",
@@ -146,7 +146,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 425
         },
-        "outputId": "aef23b41-af9e-4c87-ee97-9ea3a428b833"
+        "outputId": "c2835464-a119-4c60-a9ac-1a439eb3ac14"
       },
       "source": [
         "#@title 4. Plot + save\n",
